kubernetes-networks/canary/web-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-canary
spec:
  replicas: 3
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: web-canary
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: web-canary
      labels:
        app: web-canary
    spec:
      hostAliases:
        - ip: "151.101.36.133"
          hostnames:
            - "raw.githubusercontent.com"
      containers:
        - name: web
          image: ilya251188/otus:intro
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
          livenessProbe:
            tcpSocket:
              port: 8000
          volumeMounts:
            - name: app
              mountPath: /app
      volumes:
        - name: app
          emptyDir: {}
